detection_of_pcb_prj/detection_of_pcb/Library/Include/C154.vb


    'Two Axes Arc Interpolation function
    Declare Function c154_start_tr_arc_xy Lib "C154.dll" Alias "c154_start_tr_arc_xy" (ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_arc_xy Lib "C154.dll" Alias "c154_start_ta_arc_xy" (ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_arc_xy Lib "C154.dll" Alias "c154_start_sr_arc_xy" (ByVal CardNo As Short, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_arc_xy Lib "C154.dll" Alias "c154_start_sa_arc_xy" (ByVal CardNo As Short, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_tr_arc_zu Lib "C154.dll" Alias "c154_start_tr_arc_zu" (ByVal CardNo As Short, ByVal OffsetCz As Double, ByVal OffsetCu As Double, ByVal OffsetEz As Double, ByVal OffsetEu As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_arc_zu Lib "C154.dll" Alias "c154_start_ta_arc_zu" (ByVal CardNo As Short, ByVal Cz As Double, ByVal Cu As Double, ByVal Ez As Double, ByVal Eu As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_arc_zu Lib "C154.dll" Alias "c154_start_sr_arc_zu" (ByVal CardNo As Short, ByVal OffsetCz As Double, ByVal OffsetCu As Double, ByVal OffsetEz As Double, ByVal OffsetEu As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_arc_zu Lib "C154.dll" Alias "c154_start_sa_arc_zu" (ByVal CardNo As Short, ByVal Cz As Double, ByVal Cu As Double, ByVal Ez As Double, ByVal Eu As Double, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short

    Declare Function c154_start_tr_arc2 Lib "C154.dll" Alias "c154_start_tr_arc2" (ByRef AxisArray As sAxisArray4, ByRef OffsetCenter As sArcOffsetCenter, ByRef OffsetEnd As sArcOffsetEnd, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_ta_arc2 Lib "C154.dll" Alias "c154_start_ta_arc2" (ByRef AxisArray As sAxisArray4, ByRef CenterPos As sArcCenter, ByRef EndPos As sArcEnd, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Short
    Declare Function c154_start_sr_arc2 Lib "C154.dll" Alias "c154_start_sr_arc2" (ByRef AxisArray As sAxisArray4, ByRef OffsetCenter As sArcOffsetCenter, ByRef OffsetEnd As sArcOffsetEnd, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short
    Declare Function c154_start_sa_arc2 Lib "C154.dll" Alias "c154_start_sa_arc2" (ByRef AxisArray As sAxisArray4, ByRef CenterPos As sArcCenter, ByRef EndPos As sArcEnd, ByVal CW_CCW As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Short

    'Home Return Mode Section
    Declare Function c154_set_home_config Lib "C154.dll" Alias "c154_set_home_config" (ByVal AxisNo As Short, ByVal home_mode As Short, ByVal org_logic As Short, ByVal ez_logic As Short, ByVal ez_count As Short, ByVal erc_out As Short) As Short
    Declare Function c154_home_move Lib "C154.dll" Alias "c154_home_move" (ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double) As Short
    Declare Function c154_home_search Lib "C154.dll" Alias "c154_home_search" (ByVal AxisNo As Short, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal ORGOffset As Double) As Short

    'Manual Pulser Motion Section
    Declare Function c154_set_pulser_iptmode Lib "C154.dll" Alias "c154_set_pulser_iptmode" (ByVal AxisNo As Short, ByVal InputMode As Short, ByVal Inverse As Short) As Short
    Declare Function c154_disable_pulser_input Lib "C154.dll" Alias "c154_disable_pulser_input" (ByVal AxisNo As Short, ByVal Disable As Integer) As Short
    Declare Function c154_pulser_vmove Lib "C154.dll" Alias "c154_pulser_vmove" (ByVal AxisNo As Short, ByVal SpeedLimit As Double) As Short
    Declare Function c154_pulser_pmove Lib "C154.dll" Alias "c154_pulser_pmove" (ByVal AxisNo As Short, ByVal Dist As Double, ByVal SpeedLimit As Double) As Short
    Declare Function c154_set_pulser_ratio Lib "C154.dll" Alias "c154_set_pulser_ratio" (ByVal AxisNo As Short, ByVal DivF As Short, ByVal MultiF As Short) As Short

    'Motion Status Section
    Declare Function c154_motion_done Lib "C154.dll" Alias "c154_motion_done" (ByVal AxisNo As Short) As Short

    'Motion Interface I/O Section
    Declare Function c154_set_servo Lib "C154.dll" Alias "c154_set_servo" (ByVal AxisNo As Short, ByVal on_off As Short) As Short
    Declare Function c154_set_clr_mode Lib "C154.dll" Alias "c154_set_clr_mode" (ByVal AxisNo As Short, ByVal clr_mode As Short) As Short
    Declare Function c154_set_inp Lib "C154.dll" Alias "c154_set_inp" (ByVal AxisNo As Short, ByVal inp_enable As Short, ByVal inp_logic As Short) As Short
    Declare Function c154_set_alm Lib "C154.dll" Alias "c154_set_alm" (ByVal AxisNo As Short, ByVal alm_logic As Short, ByVal alm_mode As Short) As Short
    Declare Function c154_set_erc Lib "C154.dll" Alias "c154_set_erc" (ByVal AxisNo As Short, ByVal erc_logic As Short, ByVal erc_pulse_width As Short, ByVal erc_mode As Short) As Short
    Declare Function c154_set_erc_out Lib "C154.dll" Alias "c154_set_erc_out" (ByVal AxisNo As Short) As Short
    Declare Function c154_clr_erc Lib "C154.dll" Alias "c154_clr_erc" (ByVal AxisNo As Short) As Short
    Declare Function c154_set_sd Lib "C154.dll" Alias "c154_set_sd" (ByVal AxisNo As Short, ByVal sd_logic As Short, ByVal sd_latch As Short, ByVal sd_mode As Short) As Short
    Declare Function c154_enable_sd Lib "C154.dll" Alias "c154_enable_sd" (ByVal AxisNo As Short, ByVal Enable As Short) As Short
    Declare Function c154_set_limit_logic Lib "C154.dll" Alias "c154_set_limit_logic" (ByVal AxisNo As Short, ByVal Logic As Short) As Short
    Declare Function c154_set_limit_mode Lib "C154.dll" Alias "c154_set_limit_mode" (ByVal AxisNo As Short, ByVal limit_mode As Short) As Short
    Declare Function c154_get_io_status Lib "C154.dll" Alias "c154_get_io_status" (ByVal AxisNo As Short, ByRef io_sts As Integer) As Short

    'Interrupt Control Section
    Declare Function c154_int_control Lib "C154.dll" Alias "c154_int_control" (ByVal card_id As Short, ByVal intFlag As Short) As Short
    Declare Function c154_wait_error_interrupt Lib "C154.dll" Alias "c154_wait_error_interrupt" (ByVal AxisNo As Short, ByVal TimeOut_ms As Integer) As Short
    Declare Function c154_wait_motion_interrupt Lib "C154.dll" Alias "c154_wait_motion_interrupt" (ByVal AxisNo As Short, ByVal IntFactorBitNo As Short, ByVal TimeOut_ms As Integer) As Short
    Declare Function c154_set_motion_int_factor Lib "C154.dll" Alias "c154_set_motion_int_factor" (ByVal AxisNo As Short, ByVal int_factor As Integer) As Short

    'Position Control and Counters Section
    Declare Function c154_get_position Lib "C154.dll" Alias "c154_get_position" (ByVal AxisNo As Short, ByRef Pos As Double) As Short
    Declare Function c154_set_position Lib "C154.dll" Alias "c154_set_position" (ByVal AxisNo As Short, ByVal Pos As Double) As Short
    Declare Function c154_get_command Lib "C154.dll" Alias "c154_get_command" (ByVal AxisNo As Short, ByRef Cmd As Integer) As Short
    Declare Function c154_set_command Lib "C154.dll" Alias "c154_set_command" (ByVal AxisNo As Short, ByVal Cmd As Integer) As Short
    Declare Function c154_get_error_counter Lib "C154.dll" Alias "c154_get_error_counter" (ByVal AxisNo As Short, ByRef Error_Count As Short) As Short
    Declare Function c154_reset_error_counter Lib "C154.dll" Alias "c154_reset_error_counter" (ByVal AxisNo As Short) As Short
    Declare Function c154_set_general_counter Lib "C154.dll" Alias "c154_set_general_counter" (ByVal AxisNo As Short, ByVal CntSrc As Short, ByVal CntValue As Double) As Short
    Declare Function c154_get_general_counter Lib "C154.dll" Alias "c154_get_general_counter" (ByVal AxisNo As Short, ByRef Pos As Double) As Short

    'Continuous Motion Section
    Declare Function c154_set_continuous_move Lib "C154.dll" Alias "c154_set_continuous_move" (ByVal AxisNo As Short, ByVal conti_logic As Short) As Short
    Declare Function c154_check_continuous_buffer Lib "C154.dll" Alias "c154_check_continuous_buffer" (ByVal AxisNo As Short) As Short
    Declare Function c154_dwell_move Lib "C154.dll" Alias "c154_dwell_move" (ByVal AxisNo As Short, ByVal miniSecond As Double) As Short

    'Multiple Axes Simultaneous Operation Section
    Declare Function c154_set_tr_move_all Lib "C154.dll" Alias "c154_set_tr_move_all" (ByVal TotalAxes As Short, ByRef AxisArray As sAxisArray4, ByRef DistA As sDistA4, ByRef StrVelA As sStrVelA4, ByRef MaxVelA As sMaxVelA4, ByRef TaccA As sTaccA4, ByRef TdecA As sTdecA4) As Short
    Declare Function c154_set_sa_move_all Lib "C154.dll" Alias "c154_set_sa_move_all" (ByVal TotalAxes As Short, ByRef AxisArray As sAxisArray4, ByRef PosA As sPosA4, ByRef StrVelA As sStrVelA4, ByRef MaxVelA As sStrVelA4, ByRef TaccA As sStrVelA4, ByRef TdecA As sTdecA4, ByRef SVaccA As sSVaccA4, ByRef SVdecA As sSVdecA4) As Short
    Declare Function c154_set_ta_move_all Lib "C154.dll" Alias "c154_set_ta_move_all" (ByVal TotalAxes As Short, ByRef AxisArray As sAxisArray4, ByRef PosA As sPosA4, ByRef StrVelA As sStrVelA4, ByRef MaxVelA As sStrVelA4, ByRef TaccA As sStrVelA4, ByRef TdecA As sTdecA4) As Short
    Declare Function c154_set_sr_move_all Lib "C154.dll" Alias "c154_set_sr_move_all" (ByVal TotalAxes As Short, ByRef AxisArray As sAxisArray4, ByRef DistA As sDistA4, ByRef StrVelA As sStrVelA4, ByRef MaxVelA As sStrVelA4, ByRef TaccA As sStrVelA4, ByRef TdecA As sTdecA4, ByRef SVaccA As sSVaccA4, ByRef SVdecA As sSVdecA4) As Short
    Declare Function c154_start_move_all Lib "C154.dll" Alias "c154_start_move_all" (ByVal FirstAxisNo As Short) As Short
    Declare Function c154_stop_move_all Lib "C154.dll" Alias "c154_stop_move_all" (ByVal FirstAxisNo As Short) As Short
